--- a/views/index.jade
+++ b/views/index.jade
@@ -28,17 +28,6 @@ block content
         button.hideModals.submit-button Hide
     // /ISM DELETED TOAST
 
-    // SOURCE UPSERTED TOAST
-    .modal#sourceUpsertedModal
-      br
-      br
-      br
-      br
-      .modal-container.modal-toast
-        h1#sourceUpsertedHeader Source added
-        button.hideModals.submit-button Hide
-    // /ISM DELETED TOAST
-
     // SOURCE SELECT
     .modal#sourceSelectModal
       br
@@ -54,6 +43,17 @@ block content
         button#upsertSource.submit-button Add New Source
         button.hideModals.submit-button Hide
     // SOURCE SELECT
+
+    // SOURCE UPSERTED TOAST
+    .modal#sourceUpsertedModal
+      br
+      br
+      br
+      br
+      .modal-container.modal-toast
+        h1#sourceUpsertedHeader Source added
+        button.hideModals.submit-button Hide
+    // /SOURCE UPSERTED TOAST
 
     // UPSERT SOURCE FORM
     .modal#upsertSourceModal
