--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,8 @@ html(lang="en")
         script(src="/javascripts/upsertIsm.js")
         script(src="/javascripts/upsertSource.js")
         script(src="/javascripts/delete.js")
+        script(src="/javascripts/forms.js")
+        script(src="/javascripts/filter.js")
         script(src="/javascripts/global.js")
     block content
         some default content
