clear filter on add source click

--- a/views/index.jade
+++ b/views/index.jade
@@ -40,7 +40,7 @@ block content
         br
         br
         br
-        button#upsertSource.submit-button Add New Source
+        button#addSource.submit-button Add New Source
         button.hideModals.submit-button Hide
     // SOURCE SELECT
 
@@ -94,7 +94,7 @@ block content
     // /LOGIN FORM
 
     button#newIsm.submit-button New Ism
-    button#upsertSource2.submit-button New Source
+    button#addSource2.submit-button New Source
     button#logout.submit-button Logout
     button#login.submit-button Login
     br
