add export as json button

--- a/views/index.jade
+++ b/views/index.jade
@@ -97,6 +97,7 @@ block content
     button#addSource2.submit-button New Source
     button#logout.submit-button Logout
     button#login.submit-button Login
+    button#export.submit-button Export
     br
     br
     #sourceCloud
