reorg; add env file loading

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,24 +4,24 @@ html(lang="en")
   head
     block title
       title better isms
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/form.css')
-    link(rel='stylesheet', href='/stylesheets/modal.css')
+    link(rel='stylesheet', href='/css/style.css')
+    link(rel='stylesheet', href='/css/form.css')
+    link(rel='stylesheet', href='/css/modal.css')
   body
     block scripts
         script(src="https://code.jquery.com/jquery-1.10.0.min.js")
-        script(src="/javascripts/cookie.js")
-        script(src="/javascripts/auth.js")
-        script(src="/javascripts/tagProcessor.js")
-        script(src="/javascripts/sourceProcessor.js")
-        script(src="/javascripts/ismFormHandler.js")
-        script(src="/javascripts/modal.js")
-        script(src="/javascripts/contentHandler.js")
-        script(src="/javascripts/upsertIsm.js")
-        script(src="/javascripts/upsertSource.js")
-        script(src="/javascripts/delete.js")
-        script(src="/javascripts/forms.js")
-        script(src="/javascripts/filter.js")
-        script(src="/javascripts/global.js")
+        script(src="/cookie.js")
+        script(src="/auth.js")
+        script(src="/tagProcessor.js")
+        script(src="/sourceProcessor.js")
+        script(src="/ismFormHandler.js")
+        script(src="/modal.js")
+        script(src="/contentHandler.js")
+        script(src="/upsertIsm.js")
+        script(src="/upsertSource.js")
+        script(src="/delete.js")
+        script(src="/forms.js")
+        script(src="/filter.js")
+        script(src="/global.js")
     block content
         some default content
