make buttons absolute position in a footer; hide footer when modal is opened; show footer when modal is closed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,3 +100,11 @@ a {
   background-color: mediumseagreen;
   color: white;
 }
+
+#footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+}
