--- a/views/index.jade
+++ b/views/index.jade
@@ -88,13 +88,6 @@ block content
               button.hideModals.submit-button Hide
     // /LOGIN FORM
 
-    button#newIsm.submit-button New Ism
-    button#addSource.submit-button New Source
-    button#logout.submit-button Logout
-    button#login.submit-button Login
-    button#export.submit-button Export
-    br
-    br
     #sourceCloud
     br
     #tagCloud
@@ -153,6 +146,13 @@ block content
     #ismList
       isms
     // /ISM LIST
+
+    #footer
+      button#newIsm.submit-button New Ism
+      button#addSource.submit-button New Source
+      button#logout.submit-button Logout
+      button#login.submit-button Login
+      button#export.submit-button Export
 
     a(href="#").submit-button back to top
   // /WRAPPER
