fix button handling

--- a/views/index.jade
+++ b/views/index.jade
@@ -91,8 +91,6 @@ block content
     #sourceCloud
     br
     #tagCloud
-    br
-    button#clearFilter.submit-button(value='') Clear Filter
 
     // BULK ADD ISM FORM
     .modal#bulkAddIsmModal
@@ -153,6 +151,7 @@ block content
       button#logout.submit-button Logout
       button#login.submit-button Login
       button#export.submit-button Export
+      a(href="#")#toTop.submit-button To top
+      button#clearFilter.submit-button(value='') Clear Filter
 
-    a(href="#").submit-button back to top
   // /WRAPPER
