reorder buttons in footer; add link to end of page

--- a/views/index.jade
+++ b/views/index.jade
@@ -148,10 +148,12 @@ block content
     #footer
       button#newIsm.submit-button New Ism
       button#addSource.submit-button New Source
+      a(href="#")#toTop.submit-button To top
+      a(href="#endOfPage")#toBottom.submit-button To bottom
+      button#clearFilter.submit-button(value='') Clear Filter
+      button#export.submit-button Export
       button#logout.submit-button Logout
       button#login.submit-button Login
-      button#export.submit-button Export
-      a(href="#")#toTop.submit-button To top
-      button#clearFilter.submit-button(value='') Clear Filter
 
+    a(name="endOfPage")
   // /WRAPPER
