move clouds with the rest of the content so modals all show up in the same position

--- a/views/index.jade
+++ b/views/index.jade
@@ -88,10 +88,6 @@ block content
               button.hideModals.submit-button Hide
     // /LOGIN FORM
 
-    #sourceCloud
-    br
-    #tagCloud
-
     // BULK ADD ISM FORM
     .modal#bulkAddIsmModal
       br
@@ -138,6 +134,12 @@ block content
               button#btnClearIsm.submit-button Clear
               button.hideModals.submit-button Hide
     // /ISM FORM
+
+    // THE CLOUDS
+    #sourceCloud
+    br
+    #tagCloud
+    // /THE CLOUDS
 
     // ISM LIST
     hr
