--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,7 @@ a {
 
 #wrapper {
   position: relative;
+  padding-bottom: 2em;
 }
 
 #ismList {
@@ -102,6 +103,7 @@ a {
 }
 
 #footer {
+  background-color: white;
   position: fixed;
   bottom: 0;
   left: 0;
