--- a/views/index.jade
+++ b/views/index.jade
@@ -147,14 +147,15 @@ block content
       isms
     // /ISM LIST
 
-    a(name="endOfPage")
   // /WRAPPER
+
+  a(name="endOfPage")
 
   #footer
     button#newIsm.submit-button New Ism
     button#addSource.submit-button New Source
     a(href="#")#toTop.submit-button To top
-    a(href="#endOfPage")#toBottom.submit-button To bottom
+    a(href="#endOfPage")#toBottom.submit-button Page down
     button#clearFilter.submit-button(value='') Clear Filter
     button#export.submit-button Export
     button#logout.submit-button Logout
