--- a/views/index.jade
+++ b/views/index.jade
@@ -135,14 +135,16 @@ block content
               button.hideModals.submit-button Hide
     // /ISM FORM
 
-    // THE CLOUDS
-    #sourceCloud
-    br
-    #tagCloud
-    // /THE CLOUDS
+    .clouds
+      // THE CLOUDS
+      #sourceCloud.cloud
+      br
+      #tagCloud.cloud
+      br
+      // /THE CLOUDS
 
     // ISM LIST
-    #ismList
+    #ismList.cloud
       isms
     // /ISM LIST
 
@@ -153,9 +155,11 @@ block content
   #footer
     button#newIsm.submit-button New Ism
     button#addSource.submit-button New Source
-    a(href="#")#toTop.submit-button To top
-    a(href="#endOfPage")#toBottom.submit-button Page down
-    button#clearFilter.submit-button(value='') Clear Filter
+    a(href="#")#toTop.submit-button(title='go to top') Top
+    a(href="#endOfPage")#toBottom.submit-button(title='page down') Down
+    button#clearFilter.submit-button(title='clear tag or source') Clear
+    button#toggleSources.submit-button(title='toggle sources') Sources
+    button#toggleTags.submit-button(title='toggle tags') Tags
     button#export.submit-button Export
     button#logout.submit-button Logout
     button#login.submit-button Login
