add optional fields toggling; rename showButton and hideButton to showElement and hideElement, since it works for all elements

--- a/views/index.jade
+++ b/views/index.jade
@@ -125,7 +125,7 @@ block content
               span required
               br
               textarea#inputQuote(type='textarea', placeholder='quote or note', rows=10, value='').form-field
-              br
+              button#moreFields.submit-button More
               input#inputTags(type='text', placeholder='tags', value='').form-field
               br
               textarea#inputComments(type='textarea', placeholder='comments', rows=10, value='').form-field
