--- a/views/index.jade
+++ b/views/index.jade
@@ -151,10 +151,10 @@ block content
               br
               span#readonlyQuote
               br
-              input#newTag(type='text', placeholder='tags').form-field
+              input#newTags(type='text', placeholder='tags').form-field
               br
               button#saveAndNext.submit-button Save & Next
-              button#Quit.submit-button Quit
+              button#quitIsmUpdate.submit-button Quit
     // /TAGME UPDATE FORM
 
     .clouds
