convert contentHandler to content, and make it an object

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html(lang="en")
         script(src="/sourceProcessor.js")
         script(src="/ismFormHandler.js")
         script(src="/modal.js")
-        script(src="/contentHandler.js")
+        script(src="/content.js")
         script(src="/upsertIsm.js")
         script(src="/upsertSource.js")
         script(src="/delete.js")
