convert modals to object

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,5 +22,6 @@ html(lang="en")
         script(src="/delete.js")
         script(src="/forms.js")
         script(src="/global.js")
+        script(src="/init.js")
     block content
         some default content
