--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,9 +12,9 @@ html(lang="en")
         script(src="https://code.jquery.com/jquery-1.10.0.min.js")
         script(src="/cookie.js")
         script(src="/auth.js")
-        script(src="/tagProcessor.js")
-        script(src="/sourceProcessor.js")
-        script(src="/ismFormHandler.js")
+        script(src="/tags.js")
+        script(src="/sources.js")
+        script(src="/ismForm.js")
         script(src="/modal.js")
         script(src="/content.js")
         script(src="/upsertIsm.js")
