combine delete and upserts into database.js

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,9 +17,7 @@ html(lang="en")
         script(src="/ismForm.js")
         script(src="/modal.js")
         script(src="/content.js")
-        script(src="/upsertIsm.js")
-        script(src="/upsertSource.js")
-        script(src="/delete.js")
+        script(src="/database.js")
         script(src="/forms.js")
         script(src="/global.js")
         script(src="/init.js")
