--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,10 +16,11 @@ html(lang="en")
         script(src="/sources.js")
         script(src="/ismForm.js")
         script(src="/modal.js")
-        script(src="/content.js")
+        script(src="/contentControl.js")
+        script(src="/elements.js")
         script(src="/database.js")
         script(src="/forms.js")
-        script(src="/global.js")
+        script(src="/main.js")
         script(src="/init.js")
     block content
         some default content
