properly align tags

--- a/views/index.jade
+++ b/views/index.jade
@@ -191,10 +191,10 @@ block content
     .clouds
       // THE CLOUDS
       #sourceCloud.cloud
-        #sourceCloudButtons
-          button.sourceSortButton#title.submit-button(title='clear tag or source') Title
-          button.sourceSortButton#author.submit-button(title='toggle sources') Author
-          button.sourceSortButton#added.submit-button(title='toggle tags') Added
+        //- #sourceCloudButtons
+        //-   button.sourceSortButton#title.submit-button(title='clear tag or source') Title
+        //-   button.sourceSortButton#author.submit-button(title='toggle sources') Author
+        //-   button.sourceSortButton#added.submit-button(title='toggle tags') Added
         #sourceCloudContents
       br
       #tagCloud.cloud
