--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html(lang="en")
         script(src="/ismForm.js")
         script(src="/modal.js")
         script(src="/contentControl.js")
-        script(src="/elements.js")
+        script(src="/isms.js")
         script(src="/database.js")
         script(src="/forms.js")
         script(src="/main.js")
