add filter element; jump to filter element when filter is applied; jump to top when filter is not applied

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -103,6 +103,16 @@ a {
   align-content: flex-start;
 }
 
+#currentFilter {
+  display: flex;
+  flex-flow: wrap;
+  align-content: flex-start;
+}
+
+#currentFilterContents {
+  font-size: 2.5em;
+}
+
 .tagSpan {
   display: inline-block;
   flex-flow: row;
