--- a/views/index.jade
+++ b/views/index.jade
@@ -201,6 +201,11 @@ block content
       br
       // /THE CLOUDS
 
+    #currentFilter.cloud
+      button#clearFilter2.submit-button(title='clear tag or source') Clear
+      #currentFilterContents
+      a(name="currentFilter")
+
     // ISM LIST
     #ismList.cloud
       isms
@@ -213,7 +218,7 @@ block content
     button#newIsm.submit-button New Ism
     button#addSource.submit-button New Source
     a(href="#")#toTop.submit-button(title='go to top') Top
-    a(href="#endOfPage")#toBottom.submit-button(title='page down') Down
+    a(href="#endOfPage")#toBottom.submit-button(title='page down') Bottom
     button#clearFilter.submit-button(title='clear tag or source') Clear
     button#toggleSources.submit-button(title='toggle sources') Sources
     button#toggleTags.submit-button(title='toggle tags') Tags
